syntax = "proto3";

package com.teddy.srv.message;

option go_package = "proto";

import "github.com/golang/protobuf/ptypes/empty/empty.proto";
import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

service Message {
    rpc SendEmail (SendEmailReq) returns (google.protobuf.Empty) {}
    rpc SendInBox (SendInBoxReq) returns (google.protobuf.Empty) {}
    rpc SendNotify (SendNotifyReq) returns (google.protobuf.Empty) {}
    rpc SendSMS (SendSMSReq) returns (google.protobuf.Empty) {}

    rpc GetInBox (GetInBoxReq) returns (GetInboxResp) {}
    rpc GetNotify (GetNotifyReq) returns (stream NotifyItem) {}
}

message InBoxItem {
    string id = 1;
    string topic = 2;
    string content = 3;
    string from = 4;
    uint32 type = 5;
    bool unread = 6;
    google.protobuf.Timestamp sendTime = 7;
    google.protobuf.Timestamp ReadTime = 8;
}

message NotifyItem {
    string topic = 1;
    string detail = 2;
}

message SendEmailReq {
	string email = 1;
    string topic = 2;
    string content = 3;
    google.protobuf.Timestamp sendTime = 4;
}

message SendInBoxReq {
    string uid = 1;
    string topic = 2;
    string content = 3;
    string from = 4;
    uint32 type = 5;
    google.protobuf.Timestamp sendTime = 6;
}

message SendNotifyReq {
    string uid = 1;
    string topic = 2;
    string detail = 3;
}

message SendSMSReq {
    string phoneNumber = 1;
    string content = 2;
}

message GetInBoxReq {
    uint32 page = 1;
    uint32 size = 2;
    uint32 type = 3;
    string uid = 4;
}

message GetInboxResp {
    repeated InBoxItem items = 1;
}

message GetNotifyReq {
    string uid = 1;
}